--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,12 @@
 [tox]
 envlist = begin,py{37},py{38},py{39},end
 
+[gh-actions]
+python =
+    3.7: py37
+    3.8: py38
+    3.9: py39
+
 [testenv]
 deps = coverage
 
