--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,9 @@ python =
     3.9: py39
 
 [testenv]
-deps = coverage
+deps =
+    coverage
+    pytest
 
 [testenv:begin]
 commands = coverage erase
@@ -20,7 +22,9 @@ commands = coverage run -m unittest discover -s test -b {posargs}
 commands = coverage run -m unittest discover -s test -b {posargs}
 
 [testenv:py39]
-commands = coverage run -m unittest discover -s test -b {posargs}
+commands =
+    coverage run -m unittest discover -s test -b {posargs}
+    pytest --doctest-modules --pyargs pygada_runtime {posargs}
 
 [testenv:end]
 commands =
