--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = begin,py{37},py{38},py{39},end
+envlist = begin,py{39},end
 
 [gh-actions]
 python =
@@ -11,6 +11,7 @@ python =
 deps =
     coverage
     pytest
+setenv = PYTHONPATH = {toxinidir}/test
 
 [testenv:begin]
 commands = coverage erase
@@ -24,7 +25,7 @@ commands = coverage run -m unittest discover -s test -b {posargs}
 [testenv:py39]
 commands =
     coverage run -m unittest discover -s test -b {posargs}
-    pytest --doctest-modules --pyargs pygada_runtime {posargs}
+    coverage run -a -m pytest --doctest-modules --pyargs pygada_runtime {posargs}
 
 [testenv:end]
 commands =
