--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = begin,py{39},end
+envlist = begin,py{37},py{38},py{39},end
 
 [gh-actions]
 python =
@@ -17,10 +17,14 @@ setenv = PYTHONPATH = {toxinidir}/test
 commands = coverage erase
 
 [testenv:py37]
-commands = coverage run -m unittest discover -s test -b {posargs}
+commands =
+    coverage run -m unittest discover -s test -b {posargs}
+    coverage run -a -m pytest --doctest-modules --pyargs pygada_runtime {posargs}
 
 [testenv:py38]
-commands = coverage run -m unittest discover -s test -b {posargs}
+commands =
+    coverage run -m unittest discover -s test -b {posargs}
+    coverage run -a -m pytest --doctest-modules --pyargs pygada_runtime {posargs}
 
 [testenv:py39]
 commands =
