--- a/tox.ini
+++ b/tox.ini
@@ -37,3 +37,7 @@ commands =
 commands =
     coverage report --omit='.tox/*,test/*'
     coverage xml --omit='.tox/*,test/*'
+
+[testenv:report]
+commands =
+    coverage html --omit='.tox/*,test/*'
