--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,8 @@ python =
 deps =
     coverage
     pytest
+    pytest-asyncio
+    pytest-timeout
     gada
     gada_pyrunner
 setenv = PYTHONPATH = {toxinidir}/test
@@ -20,17 +22,17 @@ commands = coverage erase
 
 [testenv:py37]
 commands =
-    coverage run -m unittest discover -s test -b {posargs}
+    coverage run -m pytest -s test -vv {posargs}
     coverage run -a -m pytest --doctest-modules --pyargs pygada_runtime {posargs}
 
 [testenv:py38]
 commands =
-    coverage run -m unittest discover -s test -b {posargs}
+    coverage run -m pytest -s test -vv {posargs}
     coverage run -a -m pytest --doctest-modules --pyargs pygada_runtime {posargs}
 
 [testenv:py39]
 commands =
-    coverage run -m unittest discover -s test -b {posargs}
+    coverage run -m pytest -s test -vv {posargs}
     coverage run -a -m pytest --doctest-modules --pyargs pygada_runtime {posargs}
 
 [testenv:end]
