simplifying the package

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,14 @@
 [tox]
-envlist = begin,py{37},py{38},py{39},end
+envlist = begin,py{38},py{39},end
 
 [gh-actions]
 python =
-    3.7: py37
     3.8: py38
     3.9: py39
+
+[pytest]
+markers =
+    typing: only run test_typing
 
 [testenv]
 deps =
@@ -14,16 +17,10 @@ deps =
     pytest-asyncio
     pytest-timeout
     gada
-    gada_pyrunner
 setenv = PYTHONPATH = {toxinidir}/test
 
 [testenv:begin]
 commands = coverage erase
-
-[testenv:py37]
-commands =
-    coverage run -m pytest -s test -vv {posargs}
-    coverage run -a -m pytest --doctest-modules --pyargs pygada_runtime {posargs}
 
 [testenv:py38]
 commands =
@@ -43,3 +40,8 @@ commands =
 [testenv:report]
 commands =
     coverage html --omit='.tox/*,test/*'
+
+[flake8]
+ignore = A001,A002,A003,D100,D105,D107,W504
+max-line-length = 80
+exclude = .tox,docs/conf.py,pygada_runtime/parser/*
