new version for pypi

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ python =
 
 [pytest]
 markers =
+    parser: only run test_parser
     typing: only run test_typing
 
 [testenv]
@@ -44,4 +45,4 @@ commands =
 [flake8]
 ignore = A001,A002,A003,D100,D105,D107,W504
 max-line-length = 80
-exclude = .tox,docs/conf.py,pygada_runtime/parser/*
+exclude = .tox,docs/source/conf.py,pygada_runtime/parser/*
