implements iter/walk_modules/nodes

--- a/tox.ini
+++ b/tox.ini
@@ -43,6 +43,6 @@ commands =
     coverage html --omit='.tox/*,test/*'
 
 [flake8]
-ignore = A001,A002,A003,D100,D105,D107,W504
+ignore = A001,A002,A003,D100,D105,D107,RST304,W504
 max-line-length = 80
 exclude = .tox,docs/source/conf.py,pygada_runtime/parser/*
