--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ python =
 
 [pytest]
 markers =
+    module: only run test_module
     node: only run test_node
     parser: only run test_parser
     typing: only run test_typing
