can convert node to program and build an ArgumentParser

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ python =
 markers =
     module: only run test_module
     node: only run test_node
+    program: only run test_program
     parser: only run test_parser
     typing: only run test_typing
 
